[project]
name = "cherry-pick"
version = "0.1.0"
description = "CLI tool for extracting recipes from websites into PDF files."
authors = [{ name = "aein", email = "aaeinnor11@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "recipe-scrapers (>=15.6.0,<16.0.0)",
    "markdown (>=3.7,<4.0)",
    "weasyprint (>=65.0,<66.0)",
    "argparse (>=1.4.0,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "cherry_pick" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.poetry.scripts]
cherry-pick = "cherry_pick.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
